@@ -1,11 +1,16 @@
 /*
- * $Id: ChangeLog,v 1.656 2010-07-07 03:19:01 guerra000 Exp $
+ * $Id: ChangeLog,v 1.657 2010-07-20 00:28:25 guerra000 Exp $
  */
 /* Use this format for the entry headers:
    YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2010-07-19 19:38 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
+  * source/c_dialogs.c
+  * source/h_dialogs.h
+    + Added 6th parameter to GETFILE(), for select default file name.
 
 2010-07-06 22:28 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
   * source/h_form.prg
